# gdvpn

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/marekkon5/gdvpn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/marekkon5/gdvpn/: GDVPN.java  MainActivity.java  VPNConnection.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/marekkon5/gdvpn/: ExampleUnitTest.java
gdvpn_server/: .gitignore  Cargo.toml  settings_example.json
gdvpn_server/src/: gdrive.rs  main.rs  oauth.rs  queue.rs  settings.rs
gradle/wrapper/: gradle-wrapper.properties
