[package]
name = "gdvpn_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pkce = "0.1"
bytes = "1.1"
base64 = "0.13"
anyhow = "1.0"
futures = "0.3"
tokio-tun = "0.3.16"
dialoguer = "0.9"
serde_json = "1.0"
urlencoding = "2.1"
futures-core = "0.3"
async-stream = "0.3"
async-channel = "1.6"
pretty_env_logger = "0.4"

tokio = { version = "1.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio-util = { version = "0.6", features = ["full"] }